--- a/csirt.divd.nl/_cases/DIVD-2020-00002.md
+++ b/csirt.divd.nl/_cases/DIVD-2020-00002.md
@@ -20,6 +20,22 @@ versions:       n/a
 -patch_status:	Available
 recommendation: Revoke and replace certificates (preferably for non-wildcard versions) unless you can reliably determine that the Citrix system wasn't compromised.
 -workaround:			
+start:   2020-01-09
+end:     2020-01-22
+timeline:
+- start: 2020-01-09 
+  end:   2020-01-10
+  event: Inital scan to identify affecged systems. During this scan the domainnames in TLS certificates were recorded as well.  
+- start: 2020-01-22
+  end: 
+  event: Shared Data with Dutch NCSC 
+- start: 2020-01-22
+  end: 
+  event: Data analysis 
+- start: 2020-01-22
+  end: 
+  event: We sent out about 1.350 email messages to abuse@, info@ and security@ addresses of affected domains 
+
 ips: 461
 ---
 <p>
@@ -66,6 +82,8 @@ Wij zijn op dit moment bezig de lijst te verwerken en gaan daarna proberen alle 
 | 22-1-2020 | Data analyse. |
 | 22-1-2020 | We hebben ongeveer 1.350 emails gestuurd aan abuse@, info@ en security@ van de betrokken domeinen. |
 
+{% include timeline_gantt.html %}
+
 <hr>
 
 ### English
@@ -99,12 +117,5 @@ If you are highly confident that your system has not been compromised, we still 
 
 We are currently processing the list of vulnerable Citrix servers identified in our scanning and will try to inform all affected parties. We have shared our data with the NCSC.
 
-## Timeline
+{% include timeline.html %}
 
-
-| Date  | Description |
-|:-----:|-------------|
-| 9-1-2020 / 10-1-2020 | Inital scan to identify affecged systems. During this scan the domainnames in TLS certificates were recorded as well.  |
-| 22-1-2020 | Shared Data with Dutch NCSC |
-| 22-1-2020 | Data analysis |
-| 22-1-2020 | We sent out about 1.350 email messages to abuse@, info@ and security@ addresses of affected domains |
