--- a/csirt.divd.nl/_cases/DIVD-2020-00003.md
+++ b/csirt.divd.nl/_cases/DIVD-2020-00003.md
@@ -21,6 +21,31 @@ versions:       Microsoft Windows Server 2012, 2012R2, 2016 and 2019
 patch_status:	Available
 recommendation: Apply patches of Patch Tuesday January 2020
 workaround:		Superceeded by patches
+start: 2020-01-27
+end:   2020-03-09
+timeline:
+- start: 2020-01-14
+  end: 
+  event: Microsoft Patch Tuesday announced fixes for vulnerabilities {% cve CVE-2020-0609 %} and {% cve CVE-2020-0610 %}
+- start: 2020-01-27
+  end: 
+  event: POC for RCE is [announced](https://twitter.com/layle_ctf/status/1221514332049113095)
+- start: 2020-01-27
+  end: 
+  event: Start informing Dutch vulnerable system owners
+- start: 2020-01-28
+  end: 
+  event: POC owner [announces more information soon](https://twitter.com/layle_ctf/status/1221514332049113095)
+- start: 2020-01-29
+  end: 
+  event: Added advice to [restart after patching](/2020/01/29/BlueGate-patch-restart/)
+- start: 2020-02-03 
+  end: 
+  event: Sent notifications for hosts still vulnerable, 281 hosts left
+- start: 2020-03-09 
+  end: 
+  event: Case Closed 
+
 ips: 1253
 ---
 <p>
@@ -69,6 +94,8 @@ Wij zijn op dit moment bezig de lijst met kwetsbare systemen te verwerken en gaa
 | 3-2-2020  | Nieuwe ronde notificaties, nog 281 hosts kwetsbaar |
 | 9-3-2020 | Case Closed | 
 
+{% include timeline_gantt.html %}
+
 ![A picture of a a blue and red gate in the sea](/assets/images/bluegate_small.png "Image copyright Scopio")
 
 <hr>
@@ -105,16 +132,6 @@ We recommend taking these steps:
 
 We are currently processing the list of vulnerable RDP Gateway servers identified in our scan and will try to inform all affected parties.
 
-## Timeline
-
-| Date  | Description |
-|:-----:|-------------|
-| 14-1-2020 | Microsoft Patch Tuesday announced fixes for vulnerabilities {% cve CVE-2020-0609 %} and {% cve CVE-2020-0610 %} |
-| 27-1-2020 | POC for RCE is [announced](https://twitter.com/layle_ctf/status/1221514332049113095) |
-| 27-1-2020 | Start informing Dutch vulnerable system owners |
-| 28-1-2020 | POC owner [announces more information soon](https://twitter.com/layle_ctf/status/1221514332049113095) |
-| 29-1-2020 | Added advice to [restart after patching](/2020/01/29/BlueGate-patch-restart/) |
-| 3-2-2020  | Sent notifications for hosts still vulnerable, 281 hosts left |
-| 9-3-2020 | Case Closed | 
+{% include timeline.html %}
 
 ![Graph of vulnerable hosts in The Netherlands](/assets/images/DIVD-2020-00003_vulnstats.png)
