--- a/csirt.divd.nl/_cases/DIVD-2020-00004.md
+++ b/csirt.divd.nl/_cases/DIVD-2020-00004.md
@@ -20,6 +20,16 @@ versions:       n/a
 -patch_status:	n/a
 recommendation: Make sure these systems are not accessible from the internet.	
 -workaround:			
+start: 2020-01-20
+end:   2020-02-07
+timeline:
+- start: 2020-01-20
+  end:
+  event: Security Hotline receives a list of 2730 Dutch IP addresses 
+- start: 2020-02-07
+  end:
+  event: Start of the case to find the victims 
+
 ips: 2730
 ---
 <p>
@@ -51,6 +61,8 @@ Wij zijn op dit moment bezig de gepubliceerde lijst met systemen te controleren 
 | 20-1-2020 | Security Meldpunt heeft een lijst ontvangen met 2730 Nederlandse IP adressen 
 | 7-2-2020 | Start van de case om contact te gaan zoeken met de slachtoffers |  
 
+{% include timeline_gantt.html %}
+
 
 <hr>
 
@@ -75,9 +87,4 @@ We recommend taking these steps:
 
 We are currently processing the list and will try to inform all affected parties through their network provider.
 
-## Timeline
-
-| Date  | Description |
-|:-----:|-------------|
-| 20-1-2020 | Security Hotline receives a list of 2730 Dutch IP addresses 
-| 7-2-2020 | Start of the case to find the victims |  
+{% include timeline.html %}
