--- a/csirt.divd.nl/_cases/DIVD-2020-00005.md
+++ b/csirt.divd.nl/_cases/DIVD-2020-00005.md
@@ -21,6 +21,19 @@ versions:       	9, 8, 7, and 6
 recommendation: 	Disable AJP if not used, make sure to install the update
 patch_status:	 	Available
 workaround:			Comment out the line, "Connector port="8009" protocol="AJP/1.3" redirectPort=8443"
+start: 2020-02-22
+end:   2020-12-03
+timeline:
+- start: 2020-02-22
+  end: 
+  event: Security Hotline has received a list with 773 Dutch IP addresses.
+- start: 2020-02-23
+  end: 
+  event: Email sent to 72 netwerk operators
+- start: 2020-12-03
+  end: 
+  event: Case Closed.
+
 ips: 997
 ---
 <p>
@@ -59,6 +72,9 @@ Wij gaan de lijst met Nederlandse systemen nader onderzoeken en de eigenaren van
 | 23-2-2020 | E-mail verstuurd aan 72 netwerkbeheerders |
 | 3-12-2020 | Case Closed. |
 
+{% include timeline_gantt.html %}
+
+
 ![Ghostcat](/assets/images/ghostcat-logo-small.png "Image copyright Chaitin Tech")
 
 <hr>
@@ -89,13 +105,6 @@ More detailed information is available on the following pages\:
 
 We will further investigate the list of the Dutch systems and where necessary, inform the owners of the IP addresses of these systems about the vulnerability.
 
-## Timeline
-
-| Date  | Description |
-|:-----:|-------------|
-| 22-2-2020 | Security Hotline has received a list with 773 Dutch IP addresses. |
-| 23-2-2020 | Email sent to 72 netwerk operators |
-| 3-12-2020 | Case Closed. |
-
+{% include timeline.html %}
 
 ![Ghostcat](/assets/images/ghostcat-logo-small.png "Image copyright Chaitin Tech")
