--- a/csirt.divd.nl/_cases/DIVD-2020-00006.md
+++ b/csirt.divd.nl/_cases/DIVD-2020-00006.md
@@ -32,6 +32,28 @@ versions:       	"
 recommendation: 	Remove SMB services from the internet, block traffic from local network to the internet on port 445
 patch_status:	 	Available
 workaround:			"For servers: Block port 445 or disable compression. <br> For clients: None"
+start: 2020-03-10
+end:   2020-12-03
+timeline:
+- start: 2020-03-10
+  end: 
+  event: Case opened 
+- start: 2020-03-11
+  end: 
+  event: Security Holtine asks for attention for the SMBv3 vulnerability 
+- start: 2020-03-11
+  end: 
+  event: In cooperation with Mark Schloesser, DIVD has conducted an internet-wide scan for SMBv3 servers that support compression 
+- start: 2020-03-12
+  end: 
+  event: The Security Hotline will warn network operators of Dutch IP addresses that have such systems. Other Ip addresses will be dealt with through our international partners 
+- start: 2020-03-12
+  end: 
+  event: Microsoft has published an out-of-band patch for the vulnerability 
+- start: 2020-12-03
+  end: 
+  event: Case Closed. 
+
 ips: 226
 ---
 <p>
@@ -87,6 +109,9 @@ Deze kwetsbaarheid is in potentie een ernstig probleem voor client systemen (voo
 | 12-3-2020 | Microsoft heeft een out-of-band patch gepubliceerd. | 
 | 3-12-2020 | Case Closed. |
 
+
+{% include timeline_gantt.html %}
+
 <hr>
 
 ### English
@@ -127,13 +152,5 @@ Right now we are asking for everyone's attention for this vulnerability. Other s
 At this moment we are primarily asking for your attention for this vulnerability. At this point in time the impact on server systems seems low to moderate. This could change as exploit code becomes available. In addition, we believe that this vulnerability is also a threat to the security of office networks where Windows 10 is widely used. 
 This vulnerability is potentially a serious threat to client systems (Mainly Windows 10, but servers as well). It is, currently, not possible to disable compression on the client side of SMBv3. Just opening a link to a malicious SMBv3 server wil be sufficient to achieve arbitrary code execution.
 
-## Timeline
 
-| Date  | Description |
-|:-----:|-------------|
-| 10-3-2020 | Case opened |
-| 11-3-2020 | Security Holtine asks for attention for the SMBv3 vulnerability |
-| 11-3-2020 | In cooperation with Mark Schloesser, DIVD has conducted an internet-wide scan for SMBv3 servers that support compression |
-| 12-3-2020 | The Security Hotline will warn network operators of Dutch IP addresses that have such systems. Other Ip addresses will be dealt with through our international partners |
-| 12-3-2020 | Microsoft has published an out-of-band patch for the vulnerability | 
-| 3-12-2020 | Case Closed. |
+{% include timeline.html %}
