--- a/csirt.divd.nl/_cases/DIVD-2020-00007.md
+++ b/csirt.divd.nl/_cases/DIVD-2020-00007.md
@@ -23,6 +23,19 @@ versions:       ShareFile storage zones Controller 5.9.0, ShareFile storage zone
 recommendation: Run the mitigation tool as soon as possible on the storage zone controllers managing each impacted storage zone by following the guidance in the support article.
 patch_status:	 	Available
 -workaround:		
+start: 2020-05-26
+end: 2020-05-27
+timeline:
+- start: 2020-05-05
+  end: 
+  event:  Citrix informed customers via a Security Bulletin. 
+- start: 2020-05-22
+  end: 
+  event:  DIVD researchers scanned the Dutch IP range for left-behind vulnerable systems.
+- start: 2020-05-26
+  end: 
+  event:  Case opened 
+
 ips: 20
 ---
 <p>
@@ -63,6 +76,8 @@ Via [Shodan](https://shodan.io) is er gezocht naar ShareFile servers in Nederlan
 | 22-05-2020| DIVD Onderzoekers scannen de Nederlandse IP range voor achtergebleven kwetsbare systemen.|
 | 26-05-2020 | Case geopened |
 
+{% include timeline_gantt.html %}
+
 ## Meer informatie
 * [https://thehackernews.com/2020/05/citrix-sharefile-vulnerability.html](https://thehackernews.com/2020/05/citrix-sharefile-vulnerability.html)
 * [https://support.citrix.com/article/CTX269106](https://support.citrix.com/article/CTX269106)
@@ -95,13 +110,7 @@ See: [https://github.com/DimitriNL/CTX-CVE-2020-7473](https://github.com/Dimitri
 
 Via [Shodan](https://shodan.io) DIVD researchers searched for ShareFile Servers within The Netherlands. These systems have been been tested for the vulnerability. We will inform administrators of these systems. If you arrived at this article because you have received an e-mail from us, your system has been confirmed as vulnerable.
 
-## Timeline
-
-| Date  | Description |
-|:-----:|-------------|
-| 05-05-2020| Citrix informed customers via a Security Bulletin. |
-| 22-05-2020| DIVD researchers scanned the Dutch IP range for left-behind vulnerable systems.|
-| 26-05-2020 | Case opened |
+{% include timeline.html %}
 
 ## More information
 * [https://thehackernews.com/2020/05/citrix-sharefile-vulnerability.html](https://thehackernews.com/2020/05/citrix-sharefile-vulnerability.html)
