--- a/csirt.divd.nl/_cases/DIVD-2020-00008.md
+++ b/csirt.divd.nl/_cases/DIVD-2020-00008.md
@@ -22,6 +22,22 @@ versions:       Muliple versions
 recommendation: Keep Wordpress and all installed plugins up-to-date.
 -patch_status:	 	Available
 -workaround:		
+start: 2020-11-10
+end:   2020-11-30
+timeline:
+- start: 2020-11-10
+  end: 
+  event:  Scannen started
+- start: 2020-11-11
+  end: 
+  event:  Scannen finished
+- start: 2020-11-25
+  end: 
+  event:  Public readable dump.sql file notifications sent
+- start: 2020-11-30
+  end: 
+  event:  Duplicator plugin installer-log.txt notifications sent
+
 ips: 102
 ---
 <p>
@@ -50,6 +66,9 @@ Tot nu toe zijn voor de volgende kwetsbaarheden meldingen verstuurd:
 | 25-11-2020 | Publiekelijk leesbare dump.sql bestanden meldingen verstuurd |
 | 30-11-2020 | Duplicator plugin installer-log.txt meldingen verstuurd |
 
+
+{% include timeline_gantt.html %}
+
 ## Meer informatie
 * [Duplicator installer-log.txt](https://www.exploit-db.com/ghdb/3981)
 
@@ -70,14 +89,11 @@ DIVD researchers are processing the results of scanning 313.000 Wordpress sites.
 So far we have sent notifications for the following vulnerabilities:
 * Public readable dump.sql files
 * Duplicator plugin installer-log.txt
+
 ## Timeline
 
-| Date  | Description |
-|:-----:|-------------|
-| 10-11-2020 | Scannen started |
-| 11-11-2020 | Scannen finished |
-| 25-11-2020 | Public readable dump.sql file notifications sent |
-| 30-11-2020 | Duplicator plugin installer-log.txt notifications sent |
+
+{% include timeline.html %}
 
 ## More information
 * [Duplicator installer-log.txt](https://www.exploit-db.com/ghdb/3981)
