--- a/csirt.divd.nl/_cases/DIVD-2020-00009.md
+++ b/csirt.divd.nl/_cases/DIVD-2020-00009.md
@@ -21,6 +21,19 @@ versions:       n/a
 recommendation: If your organisation was affected by this data breach we recommend to make a forensic copy of the system to investigate the compromise and replace the live system with a newly built setup.
 -patch_status:	 	Available
 -workaround:	
+start: 2020-08-05
+end:   2020-12-03
+timeline:
+- start: 2020-08-04
+  end: 
+  event:  ZDnet publishes article about this breach 
+- start: 2020-08-05
+  end: 
+  event:  Case opened and notifications sent
+- start: 2020-12-03
+  end: 
+  event:  Case Closed. 
+
 ips: 1399	
 ---
 <p>
@@ -52,6 +65,9 @@ Onderzoekers van het DIVD beschikken over de dataset van kwetsbare systemen en s
 | 3-12-2020 | Case Closed. |
 
 
+{% include timeline_gantt.html %}
+
+
 ## Meer informatie
 * [https://www.zdnet.com/article/hacker-leaks-passwords-for-900-enterprise-vpn-servers/](https://www.zdnet.com/article/hacker-leaks-passwords-for-900-enterprise-vpn-servers/)
 
@@ -76,13 +92,8 @@ If there were no servers of your organisation in this data breach, you don't nee
 ## Wat do we do?
 Researchers at the DIVD have the dataset of vulnerable systems and notify administrators of the Dutch IP addresses.
 
-## Timeline
 
-| Date  | Description |
-|:-----:|-------------|
-| 04-08-2020| ZDnet publishes article about this breach |
-| 05-08-2020 | Case opened and notifications sent|
-| 3-12-2020 | Case Closed. |
+{% include timeline.html %}
 
 
 ## More information
