--- a/csirt.divd.nl/_cases/DIVD-2020-00010.md
+++ b/csirt.divd.nl/_cases/DIVD-2020-00010.md
@@ -20,7 +20,29 @@ product: 		wpDiscuz WordPress plugin
 versions: 		Any version below 7.0.5 of 23 July 2020
 recommendation: Upgrade to the latest wpDiscuz version and check system for compromise
 patch_status:	 	Available
--workaround:		
+-workaround:	
+start: 2020-08-04
+end:   2020-12-03
+timeline:
+- start: 2020-06-19
+  end: 
+  event: Wordfence's Threat Intelligence team has notified the wpDiscuz developers of the vulnerability
+- start: 2020-06-30
+  end: 
+  event: Scan of .nl domain names 
+- start: 2020-07-23
+  end: 
+  event: wpDiscuz 7.0.5  gereleased 
+- start: 2020-08-04
+  end: 
+  event: Manual validation 
+- start: 2020-08-07
+  end: 
+  event: Notifications 
+- start: 2020-12-03 
+  end: 
+  event: Case Closed. 
+
 ips: 35
 ---
 <p>
@@ -48,6 +70,9 @@ Wij hebben een groot aantal .nl domainnamen gecontroleerd om vast te stellen of 
 | 3-12-2020 | Case Closed. |
 
 
+{% include timeline_gantt.html %}
+
+
 ## Meer informatie
 * [WordFence 28-7-2020](https://www.wordfence.com/blog/2020/07/critical-arbitrary-file-upload-vulnerability-patched-in-wpdiscuz-plugin/)
 * [Bleeping Computer 28-7-2020](https://www.bleepingcomputer.com/news/security/critical-wordpress-plugin-bug-lets-hackers-take-over-hosting-account/)
@@ -66,16 +91,8 @@ Upgrade the wpDiscuz plugin on your system to 7.0.5 or newer. If you have had an
 ## What are we doing
 We have check a large number of .nl domain names to determine if wpDiscuz was installed by looking for references on the main page to the wpDiscuz stylesheet. If this was the case we have extracted the version of wpDiscuz based on the readme file (/wp-content/plugins/wpdiscuz/readme.txt). After this we have manually validated the version number on a page that has the wpDiscuz plugin active. On 7-8-2020 we have notified the abuse@, security@ and info@ addresses of these websites.
 
-## Timeline
 
-| Date  | Description |
-|:-----:|-------------|
-| 19-06-2020 | Wordfence's Threat Intelligence team has notified the wpDiscuz developers of the vulnerability|
-| 23-07-2020 | wpDiscuz 7.0.5  gereleased |
-| 30-06-2020 | Scan of .nl domain names |
-| 04-08-2020 | Manual validation |
-| 07-08-2020 | Notifications |
-| 3-12-2020 | Case Closed. |
+{% include timeline.html %}
 
 
 ## More information
