--- a/csirt.divd.nl/_cases/DIVD-2020-00011.md
+++ b/csirt.divd.nl/_cases/DIVD-2020-00011.md
@@ -186,7 +186,56 @@ recommendation: "
   Update Vembu DBR to at least 4.2.0 update 2 and limit it's exposure (don't expose to public internet)
   For other products we have not been informed of the availability of patches, it is highly recommended to not expose these products to public internet.
 "
--workaround:    
+-workaround:  
+start: 2020-10-26
+end:   2021-05-11
+timeline:
+- start: 2020-10-26 
+  end: 
+  event: Initial discovery of the vulnerabilities by Wietse Boonstra 
+- start: 2020-11-02  
+  end: 
+  event: First attempt to notify Vembu of these security issues 
+- start: 2020-11-11 
+  end: 
+  event: Initial ticket closed by Vembu without feedback 
+- start: 2021-02-01   
+  end: 
+  event: CVE reserved for the four vulnerabilities 
+- start: 2021-02-11  
+  end: 
+  event: Renewed attempt to contact Vembu 
+- start: 2020-11-02  
+  end:   2021-03-31
+  event: Time to acknowledge
+- start: 2021-03-22  
+  end: 
+  event: Vembu acknowledges receipt of vulnerability report and indicates that the problems have been resolved in their "bi-weekly" builds. 
+- start: 2021-03-31  
+  end: 
+  event: Vembu updates the images on Docker Hub to images that include the fix for these vulnerabilities 
+- start: 2020-11-02  
+  end:   2021-04-02
+  event: Time to fix
+- start: 2021-04-02   
+  end: 
+  event: Vembu updates their download page with a non-vulnerable version 
+- start: 2021-04-30  
+  end: 
+  event: ZMap scan of services listening on port 6060 of 0.0.0.0/0 
+- start: 2021-05-02   
+  end: 
+  event: First scan for vulnerable hosts using nse scripts 
+- start: 2020-11-02  
+  end:   2021-05-11
+  event: Time to fix
+- start: 2021-05-11  
+  end: 
+  event: Public disclosure of these vulnerabilities 
+- start: 2021-06-01   
+  end: 
+  event: Planned date for full disclosure 
+
 ips: 1040
 ---
 <p>
@@ -238,6 +287,10 @@ De afgelopen maanden hebben we samengewerkt met Vembu om te zorgen dat er patach
 | 1-6-2021   | Geplande datum voor full disclosure |
 | 25-8-2021  | Full disclosure van {% cve CVE-2021-26471 %}, {% cve CVE-2021-26472 %} en {% cve CVE-2021-26473 %} |
 
+
+{% include timeline_gantt.html %}
+
+
 ## Meer informatie
 
 * [DIVD CSIRT case DIVD-2020-00011](https://csirt.divd.nl/DIVD-2020-00011)
@@ -278,22 +331,9 @@ Additionally you can use nmap and the NSE scripts on our [Vembu GitHub repositor
 
 Over the past months we have been working with Vembu to make sure patches are available. Prior to the publication of this case we have scanned the entire IPv4 space for publicly accessible vulnerable Vembu BDR instances and shortly after this publication we have sent notification to the abuse addresses of these networks. 
 
-## Timeline
 
-| Date       | Description |
-|:----------:|-------------|
-| 26-10-2020 | Initial discovery of the vulnerabilities by Wietse Boonstra |
-| 2-11-2020  | First attempt to notify Vembu of these security issues |
-| 11-11-2020 | Initial ticket closed by Vembu without feedback |
-| 1-2-2021   | CVE reserved for the four vulnerabilities |
-| 11-2-2021  | Renewed attempt to contact Vembu |
-| 22-3-2021  | Vembu acknowledges receipt of vulnerability report and indicates that the problems have been resolved in their "bi-weekly" builds. |
-| 31-3-2021  | Vembu updates the images on Docker Hub to images that include the fix for these vulnerabilities |
-| 2-4-2021   | Vembu updates their download page with a non-vulnerable version |
-| 30-4-2021  | ZMap scan of services listening on port 6060 of 0.0.0.0/0 |
-| 2-5-2021   | First scan for vulnerable hosts using nse scripts |
-| 11-5-2021  | Public disclosure of these vulnerabilities |
-| 1-6-2021   | Planned date for full disclosure |
+{% include timeline.html %}
+
 
 ## More information
 * [DIVD CSIRT case DIVD-2020-00011](https://csirt.divd.nl/DIVD-2020-00011)
