--- a/csirt.divd.nl/_cases/DIVD-2020-00012.md
+++ b/csirt.divd.nl/_cases/DIVD-2020-00012.md
@@ -21,6 +21,28 @@ versions: Multiple versions, see [FortiGuard PSIRT Advisory
 recommendation: Upgrade to the latest version and reset VPN users passwords.
 patch_status:	 	Available
 -workaround:		
+start: 2020-11-22
+end:   2020-12-03
+timeline:
+- start: 2019-05-24
+  end:
+  event:  Fortinet PSIRT publishes advisory for CVE-2019-13379 
+- start: 2020-11-20
+  end:
+  event:  Researcher comes across list of vulnerable systems 
+- start: 2020-11-22
+  end:
+  event:  Bleeping Computer publishes article 
+- start: 2020-11-23
+  end:
+  event:  Fortinet issues a statement to Bleeping Computer 
+- start: 2020-11-25
+  end:
+  event:  DIVD started processing the list 
+- start: 2020-12-03
+  end:
+  event:  First notifications sent 
+
 ips: 49000
 ---
 <p>
@@ -49,6 +71,8 @@ Onderzoekers van het DIVD verwerken de gelekte lijst en verifiëren of de op de 
 | 25-11-2020 | DIVD begonnen met verwerken van de lijst |
 | 3-12-2020 | Eerste notificaties verstuurd |
 
+{% include timeline_gantt.html %}
+
 
 ## Meer informatie
 * [Bleeping Computer 22-11-2020](https://www.bleepingcomputer.com/news/security/hacker-posts-exploits-for-over-49-000-vulnerable-fortinet-vpns/)
@@ -67,16 +91,8 @@ If your system is vulnerable we advice to upgrade, and to reset the passwords fo
 ## What we are doing
 DIVD researchers are processing the list of vulnerable systems to verify if they are indeed vulnerable. If they are we will notify the administrators of these systems.
 
-## Timeline
 
-| Date  | Description |
-|:-----:|-------------|
-| 24-05-2019 | Fortinet PSIRT publishes advisory for CVE-2019-13379 |
-| 20-11-2020 | Researcher comes across list of vulnerable systems |
-| 22-11-2020 | Bleeping Computer publishes article |
-| 23-11-2020 | Fortinet issues a statement to Bleeping Computer |
-| 25-11-2020 | DIVD started processing the list |
-| 3-12-2020 | First notifications sent |
+{% include timeline.html %}
 
 ## More information
 * [Bleeping Computer 22-11-2020](https://www.bleepingcomputer.com/news/security/hacker-posts-exploits-for-over-49-000-vulnerable-fortinet-vpns/)
