--- a/csirt.divd.nl/_cases/DIVD-2020-00013.md
+++ b/csirt.divd.nl/_cases/DIVD-2020-00013.md
@@ -27,6 +27,25 @@ recommendation: "
 "
 -patch_status:	 	Available
 -workaround:		
+start: 2020-12-20
+end:   2020-12-31
+timeline:
+- start : 2020-11-29 
+  end: 
+  event: Phishing campaign reported on [Twitter](https://twitter.com/ffforward/status/1331960948245008388)
+- start : 2020-12-08 
+  end: 
+  event: Dutch list received by DIVD CSIRT
+- start : 2020-12-08
+  end:    2020-12-20
+  event: Internal discussion about how to handle cases like this
+- start:  2020-12-20
+  end:
+  event:  Case start
+- start : 2020-12-31 
+  end: 
+  event: First emails sent
+
 ips: 0
 ---
 <p>
@@ -65,9 +84,11 @@ Wij hebben het Nederlandse deel van de lijst van de onderzoeker ontvangen. Wij g
 | 8-12-2020 - 20-12-2020 | Interne discussie binnen DIVD over hoe om te gaan met dit soort cases |
 | 01-01-2021 | Eerste emails verstuurd |
 
+{% include timeline_gantt.html %}
 
 ## Meer informatie
-*
+* [https://twitter.com/ffforward/status/1331960948245008388](https://twitter.com/ffforward/status/1331960948245008388)
+* [https://twitter.com/ffforward/status/1332073057058508800](https://twitter.com/ffforward/status/1332073057058508800)
 
 <hr>
 
@@ -95,15 +116,9 @@ If you have questions about this case or need help, you can reach us on this ema
 
 We have received the list of email addresses and passwords. Each email address on the list will get an email over the next days to notify them of the breach.
 
-## Timeline
 
-| Date  | Description |
-|:-----:|-------------|
-| 29-11-2020 | Phishing campaign reported on [Twitter](https://twitter.com/ffforward/status/1331960948245008388) |
-| 8-12-2020 | Dutch list received by DIVD CSIRT |
-| 8-12-2020 - 20-12-2020 | Internal discussion about how to handle cases like this |
-| 31-12-2020 | First emails sent |
+{% include timeline.html %}
 
 ## More information
-* [https://twitter.com/ffforward/status/1331960948245008388]
-* [https://twitter.com/ffforward/status/1332073057058508800]
+* [https://twitter.com/ffforward/status/1331960948245008388](https://twitter.com/ffforward/status/1331960948245008388)
+* [https://twitter.com/ffforward/status/1332073057058508800](https://twitter.com/ffforward/status/1332073057058508800)
