--- a/csirt.divd.nl/_cases/DIVD-2020-00014.md
+++ b/csirt.divd.nl/_cases/DIVD-2020-00014.md
@@ -6,9 +6,9 @@ short: SolarWinds Orion API authentication bypass
 author: Lennaert Oudshoorn
 lead: Barry van Kampen
 excerpt: "
-	Een authenticatie bypass kan aanvallers de mogelijkeheid geven om API commando's uit te voeren, hierdoor kan het systeem gecompromiteerd worden.
-	/
-	An authentication bypass could allow attackers to execute API commands which may result in a compromise of the system.
+  Een authenticatie bypass kan aanvallers de mogelijkeheid geven om API commando's uit te voeren, hierdoor kan het systeem gecompromiteerd worden.
+  /
+  An authentication bypass could allow attackers to execute API commands which may result in a compromise of the system.
 "
 redirect_from:
   - /DIVD-2020-00014/
@@ -18,20 +18,39 @@ researchers:
 cves:
 - CVE-2020-10148
 product: "
-	SolarWinds Orion
+  SolarWinds Orion
 "
 versions: "
-	Lower than 2019 HF6 or 2020 HF2
+  Lower than 2019 HF6 or 2020 HF2
 "
 patch_status:	 	Available
 recommendation: "
-	Deploy the hotfix that is available for your Orion-version
+  Deploy the hotfix that is available for your Orion-version
 "
 -workaround:		
+start: 2020-12-28
+end:   2020-12-30
+timeline:
+- start: 2020-12-23
+  end:
+  event: Patches for this vulnerability available from SolarWinds
+- start: 2020-12-26
+  end:
+  event: Vulnerability publicly disclosed
+- start: 2020-12-28
+  end:
+  event: Public PoC available
+- start: 2020-12-30
+  end:
+  event: DIVD scans for this vulnerability
+- start: 2020-12-30
+  end:
+  event: First notifications sent
+
 ips: 0
 ---
 <p>
-	<small><a href='{{ page.url }}#english'>English below</a></small>
+  <small><a href='{{ page.url }}#english'>English below</a></small>
 </p>
 
 ## Samenvatting
@@ -59,6 +78,7 @@ Aan de hand van deze scan resultaten zullen wij de beheerders van deze systemen 
 | 30-12-2020 | DIVD scant op deze kwetsbaarheid |
 | 30-12-2020 | Eerste notificaties verstuurd |
 
+{% include timeline_gantt.html %}
 
 ## Meer informatie
 * [Security Week 28-12-2020](https://www.securityweek.com/new-zero-day-malware-indicate-second-group-may-have-targeted-solarwinds)
@@ -85,15 +105,7 @@ DIVD researchers have scanned for vulnerable systems. To determine vulnerability
 
 Based on these scan results we try to notify administrators of vulnerable systems.
 
-## Timeline
-
-| Date  | Description |
-|:-----:|-------------|
-| 23-12-2020 | Patches for this vulnerability available from SolarWinds |
-| 26-12-2020 | Vulnerability publicly disclosed |
-| 28-12-2020 | Public PoC available |
-| 30-12-2020 | DIVD scans for this vulnerability |
-| 30-12-2020 | First notifications sent |
+{% include timeline.html %}
 
 ## More information
 * [Security Week 28-12-2020](https://www.securityweek.com/new-zero-day-malware-indicate-second-group-may-have-targeted-solarwinds)
