--- a/csirt.divd.nl/_cases/DIVD-2021-00002.md
+++ b/csirt.divd.nl/_cases/DIVD-2021-00002.md
@@ -10,7 +10,7 @@ lead: Frank Breedijk
 excerpt: "Users of on-premise Kaseya VSA are advised to disable their Kaseya VSA servers."
 redirect_from:
   - /DIVD-2021-00002/
-status: Open
+status: Closed
 researchers:
 - Wietse Boonstra
 - Lennaert Oudshoorn
@@ -54,6 +54,7 @@ We have identified this server by downloading the paths ‘/’, ‘/api/v1.5/cw
 | 02-07-2021 | Kaseya publishes their advisory |
 | 02-07-2021 | DIVD start scanning to identify exposed Kaseya VSA servers |
 | 03-07-2021 | DIVD has sent out notifications to the listed abuse addresses of all exposed Kaseya VSA servers found online |
+| 09-07-2021 | With (almost) all vulnerable servers offline the work for DIVD CSIRT is done, case closed. |
 
 ## More information
 * [official  advisory](https://helpdesk.kaseya.com/hc/en-gb/articles/4403440684689-Important-Notice-July-2nd-2021) from Kaseya
