--- a/csirt.divd.nl/_cases/DIVD-2020-00007.md
+++ b/csirt.divd.nl/_cases/DIVD-2020-00007.md
@@ -102,6 +102,8 @@ Via [Shodan](https://shodan.io) DIVD researchers searched for ShareFile Servers 
 | 05-05-2020| Citrix informed customers via a Security Bulletin. |
 | 22-05-2020| DIVD researchers scanned the Dutch IP range for left-behind vulnerable systems.|
 | 26-05-2020 | Case opened |
+| 23-06-2020 | All owners of identified vulnerable systems contacted |
+| 23-06-2020 | Case closed |
 
 ## More information
 * [https://thehackernews.com/2020/05/citrix-sharefile-vulnerability.html](https://thehackernews.com/2020/05/citrix-sharefile-vulnerability.html)
