--- a/csirt.divd.nl/_cases/DIVD-2020-00001.md
+++ b/csirt.divd.nl/_cases/DIVD-2020-00001.md
@@ -4,13 +4,13 @@ title: DIVD-2020-00001 - Citrix ADC
 divd: DIVD-2020-00001
 short: Citrix ADC
 author: Frank Breedijk
-redirect_from:
-  - /DIVD-2020-00001/
-status: Case Closed
+status: Closed
 excerpt: "
 	Onze status omtrend CVE-2019-19781 / 
 	Our current status around CVE-2019-19781
 "
+redirect_from:
+  - /DIVD-2020-00001/
 researchers:
 - 
 cves:
@@ -25,7 +25,7 @@ end:   2020-03-09
 timeline:
 - start: 2019-12-17
   end: 
-  event: [Citrix reports](https://support.citrix.com/article/CTX267027) a vulnerability in Citrix ADC and advices to [implement mitigation](https://support.citrix.com/article/CTX267679
+  event: '[Citrix reports](https://support.citrix.com/article/CTX267027) a vulnerability in Citrix ADC and advices to [implement mitigation](https://support.citrix.com/article/CTX267679'
 - start: 2019-01-09
   end: 
   event: Researchers report attackers are actively searching for vulnerable systems.
@@ -34,13 +34,13 @@ timeline:
   event: Exploit code is publicly available, e.g. the [Project Zero Day India](https://github.com/projectzeroindia/CVE-2019-19781) and [Trusted Sec](https://github.com/trustedsec/cve-2019-19781)
 - start: 2020-01-13
   end: 
-  event: [The Dutch Security Hotline](https://www.securitymeldpunt.nl/) has been activated
+  event: '[The Dutch Security Hotline](https://csirt.divd.nl/) has been activated'
 - start: 2020-01-14
   end: 
   event: First notifications have been sent out by the [The Dutch Security Hotline](https://www.securitymeldpunt.nl/)
 - start: 2020-01-15
   end: 
-  event: [Blog post](/2020/01/15/How-to-check-your-Citrix-gateway/) with links to articles on how to establish whether a ADC is compromised
+  event: '[Blog post](/2020/01/15/How-to-check-your-Citrix-gateway/) with links to articles on how to establish whether a ADC is compromised'
 - start: 2020-01-16
   end: 
   event: The Dutch National Cyber Security Center, [NCSC](https://www.ncsc.nl), reports mitigation measures prove unreliable and advices to consider to [shut down Citrix ADC systems](https://www.ncsc.nl/actueel/nieuws/2020/januari/16/door-citrix-geadviseerde-mitigerende-maatregelen-niet-altijd-effectief). The Dutch Security Hotline decides to temporarily stop scanning and reporting. 
@@ -49,7 +49,7 @@ timeline:
   event: 'The NCSC clarifies its 16-1 statement: "Shut down Citrix systems if possible or take additional measures". <br> The Dutch Security Hotline continues its scanning and reporting activities.'
 - start: 2020-01-19
   end: 
-  event: [Patches avaiable](https://www.citrix.com/blogs/2020/01/19/vulnerability-update-first-permanent-fixes-available-timeline-accelerated/) for version 11.1 and 12.0. This is one day sooner then initially communicated. The date for which patches for version 12.1 and 13 are available has changed from 27-1 to 24-1. The date that patches are available for version 10 has been changed from 31-1 to 24-1.
+  event: '[Patches avaiable](https://www.citrix.com/blogs/2020/01/19/vulnerability-update-first-permanent-fixes-available-timeline-accelerated/) for version 11.1 and 12.0. This is one day sooner then initially communicated. The date for which patches for version 12.1 and 13 are available has changed from 27-1 to 24-1. The date that patches are available for version 10 has been changed from 31-1 to 24-1.'
 - start: 2020-01-24
   end: 
   event: Citrix expect to have patches available for version 10, 12.1 and 13 of ADC and SD-WAN WANOP
