--- a/csirt.divd.nl/_cases/DIVD-2022-00002.md
+++ b/csirt.divd.nl/_cases/DIVD-2022-00002.md
@@ -52,13 +52,7 @@ An attacker exploiting this vulnerability can read local and most likely sensiti
 
 * We are processing the list of vulnerable Grafana instances. We have sent the first notifications by email.
 
-| Date  | Description |
-|:-----:|-------------|
-| 03-12-2021| Vulnerability reported to Grafana. |
-| 07-12-2021| Emergency patches released and full public release. |
-| 10-01-2022 | DIVD created a list of vulnerable Grafana instances. |
-| 18-01-2022 | First version of this case file. |
-| 18-01-2022 | First notifications sent out. |
+{% include timeline.html %}
 
 ## More information
 * [Blog from Grafana](https://grafana.com/blog/2021/12/08/an-update-on-0day-cve-2021-43798-grafana-directory-traversal/)
