--- a/csirt.divd.nl/_cases/DIVD-2022-00002.md
+++ b/csirt.divd.nl/_cases/DIVD-2022-00002.md
@@ -3,6 +3,7 @@ layout: case
 title: DIVD-2022-00002 - Grafana
 divd: DIVD-2022-00002
 short: Unauthenticated Directory Traversal vulnerability in Grafana - CVE-2021-43798
+excerpt: Unauthenticated Directory Traversal vulnerability in Grafana - CVE-2021-43798
 author: Tom Wolters
 lead: Tom Wolters
 redirect_from:
