--- a/csirt.divd.nl/_cases/DIVD-2022-00004.md
+++ b/csirt.divd.nl/_cases/DIVD-2022-00004.md
@@ -1,6 +1,7 @@
 ---
 layout: case
 title: DIVD-2022-00004 - Post-Log4J Open Database C2 and Monero Miner Infections
+excerpt: Post-Log4J Open Database Instances used for C2 and Moneri Miner Infections.
 divd: DIVD-2022-00004
 author: Max van der Horst
 lead: Max van der Horst
@@ -26,6 +27,9 @@ timeline:
 - start: 2022-01-12
   end:
   event:  Open database instances found used for C2.
+- start: 2022-01-13
+  end:
+  event:  Case Opened
 - start: 2022-01-13
   end:
   event:  DIVD started scanning for open database instances.
