--- a/csirt.divd.nl/_cases/DIVD-2021-00006.md
+++ b/csirt.divd.nl/_cases/DIVD-2021-00006.md
@@ -16,7 +16,7 @@ cves:
   - CVE-2021-32233
   - CVE-2021-32234
   - CVE-2021-43977
-versions: 
+versions:
 - SmarterMail 16.x All versions
 - SmarterMail before 100.0.7803 (May 13, 2021)
 recommendation: "
@@ -29,16 +29,16 @@ end:
 timeline:
 - start: 2021-04-30
   end:
-  event: Vendor contacted and informed. 
+  event: Vendor contacted and informed.
 - start: 2021-04-30
   end:
-  event: Scanning internet-facing implementations. 
+  event: Scanning internet-facing implementations.
 - start: 2021-04-30
   end:
-  event: Start of the identification of possible victims (with internet-facing systems). 
+  event: Start of the identification of possible victims (with internet-facing systems).
 - start: 2021-05-03
   end:
-  event: Contacted vendor if email was received. Resend information to vendor. 
+  event: Contacted vendor if email was received. Resend information to vendor.
 - start: 2021-05-10
   end:
   event: Vendor responds that they are working on it.
@@ -50,21 +50,24 @@ timeline:
   event: Time to fix
 - start: 2021-06-01
   end:
-  event: Vendor issues patch(es). 
+  event: Vendor issues patch(es).
 - start: 2021-04-30
   end:   2021-11-16
   event: Time to disclose
 - start: 2021-11-16
   end:
-  event: First version of this case file. 
+  event: First version of this case file.
 - start: 2021-12-02
   end:
-  event: First notifications sent out. 
+  event: Notifications sent out.
+- start: 2022-01-13
+  end:
+  event: Case closed
 
 ips: 0
 ---
 ## Summary
-One of our researchers found multiple vulnerabilities in SmarterMail, which we were in the process of responsible disclosure (or Coordinated Vulnerability Disclosure) with SmarterTools Inc. Both vulnerabilities were discovered within the webmail fronted of SmarterMail. 
+One of our researchers found multiple vulnerabilities in SmarterMail, which we were in the process of responsible disclosure (or Coordinated Vulnerability Disclosure) with SmarterTools Inc. Both vulnerabilities were discovered within the webmail fronted of SmarterMail.
 
 ## The vulnerabilities
 We notified SmarterTools Inc. of the following vulnerabilities:
@@ -78,6 +81,8 @@ If you are running a version of SmarterMail before 100.0.7803 (May 13, 2021) or 
 ## What we are doing
 We are processing the list of vulnerable SmarterMail servers.
 
+## Closing notes
+As fingerprinting newer versions of SmarterMail is not reliable, and the patch has been out for over six months now, we consider this case closed.
 
 {% include timeline.html %}
 
