Closing both cases

--- a/csirt.divd.nl/_cases/DIVD-2021-00006.md
+++ b/csirt.divd.nl/_cases/DIVD-2021-00006.md
@@ -7,7 +7,7 @@ author: Victor Pasman
 lead: Lennaert Oudshoorn
 redirect_from:
   - /DIVD-2021-00006/
-status: Open
+status: Closed
 excerpt: Multiple vulnerabilities discovered in all versions of 16.x of Smartertools SmarterMail and all versions before 100.0.7803 (May 13, 2021)
 researchers:
   - Wietse Boonstra
