--- a/csirt.divd.nl/_cases/DIVD-2021-00036.md
+++ b/csirt.divd.nl/_cases/DIVD-2021-00036.md
@@ -7,7 +7,7 @@ author: Lennaert Oudshoorn
 lead: Matthijs Koot
 redirect_from:
   - /DIVD-2021-00036/
-status : Open
+status : Closed
 excerpt: We will be scanning for CVE-2021-21980
 researchers:
 - Lennaert Oudshoorn
@@ -37,6 +37,9 @@ timeline:
 - start: 2021-12-05
   end:
   event: DIVD CSIRT sends mail to owners of vulnerable systems that were found.
+- start: 2022-01-12
+  end:
+  event: DIVD scanned the internet again, with very few vulnerable hosts remaining this case can be closed.
 ---
 ## Summary
 
