--- a/csirt.divd.nl/_cases/DIVD-2022-00004.md
+++ b/csirt.divd.nl/_cases/DIVD-2022-00004.md
@@ -49,7 +49,7 @@ timeline:
 ---
 ## Summary
 
-During the Log4J crisis, there was an active campaign going on by [Team TNT](https://attack.mitre.org/groups/G0139/) to infect servers using the Log4Shell vulnerability ([CVE-2021-44228](https://nvd.nist.gov/vuln/detail/CVE-2021-44228)) and install cryptominers. In this campaign, open database instances were used to control the infected servers, forming a botnet. The first attack was discovered on sunday December 13th, and multiple thousands of servers still seem to be used for this purpose and with these thoundands, a similar number of servers mining Monero for Team TNT.
+During the Log4J crisis, there was an active campaign going on by [Team TNT](https://attack.mitre.org/groups/G0139/) to infect servers using the Log4Shell vulnerability ([CVE-2021-44228](https://nvd.nist.gov/vuln/detail/CVE-2021-44228)) and install crypto miners. In this campaign, open database instances were used to control the infected servers, forming a botnet. The first attack was discovered on Sunday, December 13th, and multiple thousands of servers still seem to be used for this purpose, and with these thousands, a similar number of servers mining Monero for Team TNT.
 
 ## What you can do
 
@@ -57,7 +57,8 @@ During the Log4J crisis, there was an active campaign going on by [Team TNT](htt
 
 ## What we are doing
 
-* DIVD is currently ensuring that the owners of databases with sensitive data are being notified. After notifying those owners, we will move on to making notification to and of any found server used for malicious intent and make effort to notify found victim servers. 
+* DIVD is currently ensuring that the owners of databases with sensitive data are being notified.
+* DIVD is investigating if we can start informing individuals who were compromised.
 
 {% include timeline.html %}
 
