Added IP count and CVE

--- a/csirt.divd.nl/_cases/DIVD-2022-00004.md
+++ b/csirt.divd.nl/_cases/DIVD-2022-00004.md
@@ -13,7 +13,7 @@ researchers:
 - Ralph Horn
 - Max van der Horst
 cves:
-- CVE n/a
+- CVE-2021-44228
 product: To be published
 versions: any
 recommendation: "Check your system for active Monero mining software, check for unknown users and SSH keys, and when applicable ensure your database instances are properly secured."
@@ -45,7 +45,7 @@ timeline:
 - start: 2022-01-25
   end:
   event:  DIVD starts first round of notifications.
-
+ips: 8381
 ---
 ## Summary
 
