--- a/csirt.divd.nl/_cases/DIVD-2021-00006.md
+++ b/csirt.divd.nl/_cases/DIVD-2021-00006.md
@@ -25,7 +25,7 @@ recommendation: "
 patch_status: Full patched
 -workaround: N/A
 start: 2021-04-30
-end:   
+end: 2022-01-13
 timeline:
 - start: 2021-04-30
   end:
