--- a/csirt.divd.nl/_cases/DIVD-2021-00036.md
+++ b/csirt.divd.nl/_cases/DIVD-2021-00036.md
@@ -20,7 +20,7 @@ Upgrade VMware vCenter Server and VMware Cloud Foundation to the latest version"
 patch_status:	 	Full patched
 -workaround:		n/a
 start: 2021-12-03
-end:
+end: 2022-01-12
 timeline:
 - start: 2021-11-23
   end:
