--- a/csirt.divd.nl/_cases/DIVD-2021-00039.md
+++ b/csirt.divd.nl/_cases/DIVD-2021-00039.md
@@ -72,4 +72,4 @@ We are scanning the internet for vulnerable servers, and will notify system owne
 ## More information
 * [Padvish Threats Database](https://threats.amnpardaz.com/en/2021/12/28/implant-arm-ilobleed-a/)
 * [NCSC Advisories](https://advisories.ncsc.nl/advisory?id=NCSC-2022-0006)
-* [HP Customer Bulliten](https://support.hpe.com/hpesc/public/docDisplay?docId=emr_na-a00120318en_us)
+* [HP Customer Bulletin](https://support.hpe.com/hpesc/public/docDisplay?docId=emr_na-a00120318en_us)
