--- a/csirt.divd.nl/_cases/DIVD-2021-00033.md
+++ b/csirt.divd.nl/_cases/DIVD-2021-00033.md
@@ -40,6 +40,9 @@ timeline:
 - start: 2022-01-27
   end:
   event:  We started mailing the owners of the vulnerable sites
+- start: 2022-01-30
+  end: 
+  event: All notifications have been sent to affected parties
 ---
 
 
