--- a/csirt.divd.nl/_cases/DIVD-2021-00033.md
+++ b/csirt.divd.nl/_cases/DIVD-2021-00033.md
@@ -38,7 +38,7 @@ timeline:
   end:
   event:  First version of the casefile published
 - start: 2022-01-27
-  end:
+  end: 2022-01-30
   event:  We started mailing the owners of the vulnerable sites
 - start: 2022-01-30
   end: 
