Simplyfy working with cases. Automated and lint stuff

--- a/csirt.divd.nl/_cases/DIVD-2020-00001.md
+++ b/csirt.divd.nl/_cases/DIVD-2020-00001.md
@@ -4,6 +4,7 @@ title: DIVD-2020-00001 - Citrix ADC
 divd: DIVD-2020-00001
 short: Citrix ADC
 author: Frank Breedijk
+lead: Frank Breedijk
 status: Closed
 excerpt: "
 	Onze status omtrend CVE-2019-19781 / 
@@ -59,7 +60,6 @@ timeline:
 - start: 2020-03-09
   end: 
   event: Case Closed 
-
 ips: 546
 ---
 <p>
