--- a/csirt.divd.nl/_cases/DIVD-2020-00002.md
+++ b/csirt.divd.nl/_cases/DIVD-2020-00002.md
@@ -4,9 +4,10 @@ title: DIVD-2020-00002 - Wildcard certificaten Citrix ADC
 divd: DIVD-2020-00002
 short: Wildcard Certificates Citrix ADC
 author: Frank Breedijk
+lead: Frank Breedijk
 redirect_from:
   - /DIVD-2020-00002/
-status : Case Closed
+status : Closed
 excerpt: "
 	Op ruim 450 kwetsbare Citrix ADC systemen hebben wij wildcard certificaten aangetroffen / 
 	We have found over 450 vulnerable Citrix ADC that used wildcard certificates
