--- a/csirt.divd.nl/_cases/DIVD-2020-00003.md
+++ b/csirt.divd.nl/_cases/DIVD-2020-00003.md
@@ -4,9 +4,10 @@ title: DIVD-2020-00003 - Microsoft RDP Gateway vulnerable for Bluegate RCE
 divd: DIVD-2020-00003
 short: Exploits available for MS RDP Gateway Bluegate
 author: Barry van Kampen
+lead: Barry van Kampen
 redirect_from:
   - /DIVD-2020-00003/
-status : Case Closed
+status : Closed
 excerpt: "
 	16.000 kwetsbare Microsoft RDP Gateway systemen online / 
 	16.000 vulnerable Microsoft RDP Gateway systemen online
