--- a/csirt.divd.nl/_cases/DIVD-2020-00004.md
+++ b/csirt.divd.nl/_cases/DIVD-2020-00004.md
@@ -4,6 +4,7 @@ title: DIVD-2020-00004 - List of Mirai botnet victims published with credentials
 divd: DIVD-2020-00004
 short: List of Mirai botnet victims published with credentials
 author: Sander Spierenburg
+lead: Sander Spierenburg
 redirect_from:
   - /DIVD-2020-00004/
 status : Closed
