--- a/csirt.divd.nl/_cases/DIVD-2020-00011.md
+++ b/csirt.divd.nl/_cases/DIVD-2020-00011.md
@@ -11,7 +11,7 @@ excerpt: "
 "
 redirect_from:
   - /DIVD-2020-00011/
-status : Open
+status : Closed
 researchers:
 - Wietse Boonstra
 - Frank Breedijk
