--- a/csirt.divd.nl/_cases/DIVD-2020-00012.md
+++ b/csirt.divd.nl/_cases/DIVD-2020-00012.md
@@ -7,7 +7,7 @@ author: Lennaert Oudshoorn
 lead: Frank Breedijk
 redirect_from:
   - /DIVD-2020-00012/
-status : Open
+status : Closed
 excerpt: "
 	Er is een lijst online aangetroffen met 49 577 kwetsbare Fortinet VPN devices waarvan login credentials gestolen kunnen worden / 
 	A list was found online, with 49 577 vulnerable Fortinet VPN devices, potentially login credentials could be exposed
