--- a/csirt.divd.nl/_cases/DIVD-2020-00013.md
+++ b/csirt.divd.nl/_cases/DIVD-2020-00013.md
@@ -46,7 +46,7 @@ timeline:
   end: 
   event: First emails sent
 
-ips: 0
+ips: n/a
 ---
 <p>
 	<small><a href='{{ page.url }}#english'>English below</a></small>
