--- a/csirt.divd.nl/_cases/DIVD-2021-00011.md
+++ b/csirt.divd.nl/_cases/DIVD-2021-00011.md
@@ -8,7 +8,7 @@ lead: Frank Breedijk
 excerpt: "Wietse Boonstra found multiple vulnerabilities in Kaseya VSA, this casefile details the disclosure process."
 redirect_from:
   - /DIVD-2021-00011/
-status: Open
+status: Closed
 researchers:
 - Wietse Boonstra
 - Lennaert Oudshoorn
@@ -79,7 +79,7 @@ timeline:
 - start: 2021-07-07
   end:
   event: Limited publication (after 3 months).
-ips: 0
+ips: n/a
 ---
 ## Summary
 One of our researchers found multiple vulnerabilities in Kaseya VSA, which we were in the process of responsible disclosure (or Coordinated Vulnerability Disclosure) with Kaseya, before all these vulnerabilities could be patched a ransomware attack happened using Kaseya VSA.
