--- a/csirt.divd.nl/_cases/DIVD-2021-00012.md
+++ b/csirt.divd.nl/_cases/DIVD-2021-00012.md
@@ -7,7 +7,7 @@ author: Frank Breedijk
 lead: Lennaert Oudshoorn
 redirect_from:
   - /DIVD-2021-00012/
-status : Open
+status : Closed
 excerpt: One of our researchers has discovered a database full of usernames and passwords that criminals have stolen from their victims'.
 researchers:
 - Tom Wolters
@@ -49,7 +49,7 @@ timeline:
 - start: 2021-06-04
   end:
   event: Case closed
-ips: 0
+ips: n/a
 ---
 <p>
   <small><a href='{{ page.url }}#english'>English below</a></small>
