--- a/csirt.divd.nl/_cases/DIVD-2021-00017.md
+++ b/csirt.divd.nl/_cases/DIVD-2021-00017.md
@@ -1,6 +1,6 @@
 ---
 layout: case
-title: DIVD-2021-00017 – SolarWinds N-able N-central agent vulnerabilities
+title: DIVD-2021-00017 - SolarWinds N-able N-central agent vulnerabilities
 divd: DIVD-2021-00017
 short: DIVD recommends updating N-able to version 2021.1 HF6 or higher.
 author: Hidde Smit
