--- a/csirt.divd.nl/_cases/DIVD-2021-00004.md
+++ b/csirt.divd.nl/_cases/DIVD-2021-00004.md
@@ -55,7 +55,7 @@ timeline:
   end:
   event: Case closed
 
-ips: 0		
+ips: n/a	
 ---
 <p>
 	<small><a href='{{ page.url }}#english'>English below</a></small>
