--- a/csirt.divd.nl/_cases/DIVD-2022-00004.md
+++ b/csirt.divd.nl/_cases/DIVD-2022-00004.md
@@ -7,7 +7,7 @@ author: Max van der Horst
 lead: Max van der Horst
 redirect_from:
 - /DIVD-2022-00004/
-status : Closed
+status : Open
 researchers:
 - Wietse Boonstra
 - Ralph Horn
