Added `ips: n/a` to cases with `ips: 0` or no `ips` at all

--- a/csirt.divd.nl/_cases/DIVD-2021-00036.md
+++ b/csirt.divd.nl/_cases/DIVD-2021-00036.md
@@ -19,6 +19,7 @@ recommendation: "
 Upgrade VMware vCenter Server and VMware Cloud Foundation to the latest version"
 patch_status:	 	Full patched
 -workaround:		n/a
+ips: n/a
 start: 2021-12-03
 end: 2022-01-12
 timeline:
