--- a/csirt.divd.nl/_cases/DIVD-2020-00014.md
+++ b/csirt.divd.nl/_cases/DIVD-2020-00014.md
@@ -47,7 +47,7 @@ timeline:
   end:
   event: First notifications sent
 
-ips: 0
+ips: n/a
 ---
 <p>
   <small><a href='{{ page.url }}#english'>English below</a></small>
