Revert "Added `ips: n/a` to cases with `ips: 0` or no `ips` at all"
This reverts commit 057aa21d283b0c15478dd17a4cd76a156becf1c4.

--- a/csirt.divd.nl/_cases/DIVD-2020-00014.md
+++ b/csirt.divd.nl/_cases/DIVD-2020-00014.md
@@ -47,7 +47,7 @@ timeline:
   end:
   event: First notifications sent
 
-ips: n/a
+ips: 0
 ---
 <p>
   <small><a href='{{ page.url }}#english'>English below</a></small>
