--- a/csirt.divd.nl/_cases/DIVD-2021-00006.md
+++ b/csirt.divd.nl/_cases/DIVD-2021-00006.md
@@ -64,7 +64,7 @@ timeline:
   end:
   event: Case closed
 
-ips: n/a
+ips: 0
 ---
 ## Summary
 One of our researchers found multiple vulnerabilities in SmarterMail, which we were in the process of responsible disclosure (or Coordinated Vulnerability Disclosure) with SmarterTools Inc. Both vulnerabilities were discovered within the webmail fronted of SmarterMail.
