--- a/csirt.divd.nl/_cases/DIVD-2022-00002.md
+++ b/csirt.divd.nl/_cases/DIVD-2022-00002.md
@@ -24,19 +24,22 @@ end:
 timeline:
 - start: 2021-12-03
   end:
-  event:  Vulnerability reported to Grafana
+  event:  Vulnerability reported to Grafana.
 - start: 2021-12-07
   end:
-  event:  Emergency patches released and full public release
+  event:  Emergency patches released and full public release.
 - start: 2022-01-10
   end:
-  event:  DIVD created a list of vulnerable Grafana instances
+  event:  DIVD created a list of vulnerable Grafana instances.
 - start: 2022-01-18
   end:
-  event:  First version of this case file
+  event:  First version of this case file.
 - start: 2022-01-18
   end:
   event:  DIVD sent out a first batch of notifications.
+- start: 2022-02-06
+  end:
+  event:  DIVD sent out a second batch of notifications.
 
 ---
 ## Summary
